# semantic-routing

./: .dockerignore  .gitignore  .opencode.json.swp  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NOTICE  PROJECT.md  PROMPT.md  README.md  claude.json  config.yaml  core.py  create_test_workspace.py  gateway_stream_test.py  gateway_test.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vLLMsr_model.py
.github/workflow/: docker-image.yaml
.github/workflows/: brick-complexity-server.yml  ci.yml  docker-image.yaml  docker.yml  npm-publish.yml  publish-brick-cc.yml
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
apps/cli/: .gitignore  README.md  bablascii.txt  package-lock.json  package.json  tsconfig.json
apps/router/: Dockerfile  README.md
config/: config.yaml
deploy/docker-compose/: config.brick-cc.yaml  docker-compose.brick-cc.yml  docker-compose.yml
docker/: Dockerfile.filter  Dockerfile.mock-router  Dockerfile.monitor  README.md  docker-compose.mock.yml  docker-compose.yml  mock_router.py
docker/config/: config.yaml
docs/paper/: algorythm.tex  dataset_a.tex  paper.tex  routers.tex
docs/quickstart/: eval.md  quick.md  serve.md
evals/: run_evals.sh  run_evals_v2.sh
evals/stage6_individual_hard/: questions_and_answers.md
examples/: README.md
monitor/: README.md  __init__.py  dashboard.py  time_logger.py
monitor/dashboard/: index.html
my_model/: __init__.py  modality.py
my_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
my_model/cli/: main.py
my_model/config/: __init__.py  schema.py
my_model/gateway/: __init__.py
my_model/providers/: __init__.py  base.py  (+6 more)
(+215 files in other folders)
